fix: overflow in color picker

--- a/assets/scss/components/_input-color-picker.scss
+++ b/assets/scss/components/_input-color-picker.scss
@@ -4,6 +4,9 @@
       &_sample, &_sl, &_slider {
         border-radius: $border-radius;
       }
+      &_sample {
+        overflow: hidden;
+      }
     }
   }
 }
